// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PricingTypeField should render correctly for PricingType = AllIn 1`] = `
<DocumentFragment>
  <div>
    <label>
      All in
    </label>
    <div
      class="field"
      style="display: inherit; justify-content: unset; align-items: center;"
    >
      <div
        class="ui right labeled input"
        data-test-id="pricingAllIn"
        defaultcurrency="CHF"
        pricingtype="ALL_IN"
      >
        <input
          name="pricingAllIn"
          step="0.01"
          type="number"
          value=""
        />
        <div
          class="ui basic label label"
          style="border-top-right-radius: .21428571rem; border-bottom-right-radius: .21428571rem; height: 32px; padding-top: 8px;"
        >
          %
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PricingTypeField should render correctly for PricingType = FlatFee 1`] = `
<DocumentFragment>
  <div>
    <label>
      Flat fee
    </label>
    <div
      class="ui input"
      data-test-id="pricingFlatFeeAmount.amount"
    >
      <input
        name="pricingFlatFeeAmount.amount"
        type="text"
        value="0.00"
      />
    </div>
    <div
      aria-expanded="false"
      class="ui compact search selection dropdown"
      data-test-id="pricingFlatFeeAmount.currency"
      form="[object Object]"
      name="pricingFlatFeeAmount.currency"
      role="combobox"
      style="margin: 0px 0px 0px 5px; width: 80px;"
    >
      <input
        aria-autocomplete="list"
        autocomplete="off"
        class="search"
        tabindex="0"
        type="text"
        value=""
      />
      <div
        aria-live="polite"
        class="text"
        role="alert"
      >
        CHF
      </div>
      <i
        aria-hidden="true"
        class="dropdown icon"
      />
      <div
        class="menu transition"
        role="listbox"
      >
        <div
          aria-checked="false"
          aria-selected="false"
          class="item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            AED
          </span>
        </div>
        <div
          aria-checked="true"
          aria-selected="true"
          class="active selected item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            CHF
          </span>
        </div>
        <div
          aria-checked="false"
          aria-selected="false"
          class="item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            EUR
          </span>
        </div>
        <div
          aria-checked="false"
          aria-selected="false"
          class="item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            GBP
          </span>
        </div>
        <div
          aria-checked="false"
          aria-selected="false"
          class="item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            JPY
          </span>
        </div>
        <div
          aria-checked="false"
          aria-selected="false"
          class="item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            USD
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PricingTypeField should render correctly for PricingType = Margin 1`] = `
<DocumentFragment>
  <div>
    <label>
      Margin
    </label>
    <div
      class="field"
      style="display: inherit; justify-content: unset; align-items: center;"
    >
      <div
        class="ui right labeled input"
        data-test-id="margin"
        defaultcurrency="CHF"
        pricingtype="MARGIN"
      >
        <input
          name="pricingMargin"
          step="0.01"
          type="number"
          value=""
        />
        <div
          class="ui basic label label"
          style="border-top-right-radius: .21428571rem; border-bottom-right-radius: .21428571rem; height: 32px; padding-top: 8px;"
        >
          %
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PricingTypeField should render correctly for PricingType = RiskFee 1`] = `
<DocumentFragment>
  <div>
    <label>
      Risk fee
    </label>
    <div
      class="field"
      style="display: inherit; justify-content: unset; align-items: center;"
    >
      <div
        class="ui right labeled input"
        data-test-id="riskFee"
        defaultcurrency="CHF"
        pricingtype="RISK_FEE"
      >
        <input
          name="pricingRiskFee"
          step="0.01"
          type="number"
          value=""
        />
        <div
          class="ui basic label label"
          style="border-top-right-radius: .21428571rem; border-bottom-right-radius: .21428571rem; height: 32px; padding-top: 8px;"
        >
          %
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PricingTypeField should render correctly for PricingType = Split 1`] = `
<DocumentFragment>
  <div>
    <label>
      Risk fee
    </label>
    <div
      class="field"
      style="display: inherit; justify-content: unset; align-items: center;"
    >
      <div
        class="ui right labeled input"
        data-test-id="riskFee"
        defaultcurrency="CHF"
        pricingtype="SPLIT"
      >
        <input
          name="pricingRiskFee"
          step="0.01"
          type="number"
          value=""
        />
        <div
          class="ui basic label label"
          style="border-top-right-radius: .21428571rem; border-bottom-right-radius: .21428571rem; height: 32px; padding-top: 8px;"
        >
          %
        </div>
      </div>
    </div>
  </div>
  <div>
    <label>
      Margin
    </label>
    <div
      class="field"
      style="display: inherit; justify-content: unset; align-items: center;"
    >
      <div
        class="ui right labeled input"
        data-test-id="margin"
        defaultcurrency="CHF"
        pricingtype="SPLIT"
      >
        <input
          name="pricingMargin"
          step="0.01"
          type="number"
          value=""
        />
        <div
          class="ui basic label label"
          style="border-top-right-radius: .21428571rem; border-bottom-right-radius: .21428571rem; height: 32px; padding-top: 8px;"
        >
          %
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
